data/derived/fa15/progs/unify/prog0780.ml.out
Characters 16-29:
  let _ = sumList [1; -2; 3; 5];;
                  ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
